--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site settings
-title: Microdust
+title: Dian Blog
 header-img: "img/autumn2.jpg"
 tagline: "吉光片羽"  
-description: "在遙遠的地方 一切虔誠終必相遇"  
+description: "文字抵抗遗忘"  
 baseurl: ""
-url: "http://azeril.me"  
+url: "http://zhangdian0801.github.io"  
 #url: "http://localhost:4000"
 
 # About/contact
 owner: 
-  name: "Azeril"
-  email: azeril@live.cn
+  name: "Zhangdian"
+  email: zhangdian0801@gmail.com
   bio: "明朝即長路 惜取此時心"
 
 # Data
@@ -19,10 +19,10 @@ favicon: img/favicon.ico
 
 douban_username: Azeril
 twitter_username: Azeril_Lapland  
-github_username: Azeril  
+github_username: zhangdian0801  
 facebook_username: Azeril_Lapland  
 weibo_username: Azeril  
-zhihu_username: Azeril  
+zhihu_username: zhangdian0801  
 
 # Build settings  
 # use Github Flavored Markdown !important  
@@ -53,7 +53,7 @@ defaults:
       type: "posts"
     values:
       layout: "post"
-      author: "Azeril"
+      author: "zhangdian"
       header-img: "img/fantasy.jpg" # We don't want posts without a header image, that whould mean white on white
 
 
@@ -61,9 +61,9 @@ defaults:
 comments :
   provider : duoshuo
   duoshuo :
-    short_name : Azeril
+    short_name : zhangdian
   disqus :
-      short_name : Azeril
+      short_name : zhangdian
 
 # Analytics and webmaster tools stuff goes here
 google_analytics: UA-66863061-1
