--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Dian Blog
-header-img: "img/autumn2.jpg"
+header-img: "img/rose.jpg"
 tagline: "吉光片羽"  
 description: "文字抵抗遗忘"  
 baseurl: ""
