--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@ gavatar: http://dreamofbook.qiniudn.com/Az..png
 favicon: img/favicon.ico
 
 douban_username: Azeril
-twitter_username: Azeril_Lapland  
+twitter_username: zhangdian0801 
 github_username: zhangdian0801  
 facebook_username: Azeril_Lapland  
-weibo_username: Azeril  
+weibo_username:   
 zhihu_username: zhangdian0801  
 
 # Build settings  
