--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ twitter_username: zhangdian0801
 github_username: zhangdian0801  
 facebook_username: Azeril_Lapland  
 weibo_username:   
-zhihu_username: zhangdian0801  
+zhihu_username: dian-dian-61-25 
 
 # Build settings  
 # use Github Flavored Markdown !important  
