--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ owner:
 gavatar: http://dreamofbook.qiniudn.com/Az..png
 favicon: img/favicon.ico
 
-douban_username: Azeril
+douban_username: zhangdian
 twitter_username: zhangdian0801 
 github_username: zhangdian0801  
 facebook_username: Azeril_Lapland  
